feat(docker): disable Next.js telemetry in containerized deployments
- Add NEXT_TELEMETRY_DISABLED=1 to Dockerfile (builder and runner stages)
- Add NEXT_TELEMETRY_DISABLED=1 to docker-compose.yml
- Add build-args to GitHub Actions workflow
- Document environment variables in README

This ensures no telemetry data is collected from containerized
deployments, respecting user privacy and reducing network overhead.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: tuxmate:latest
+    image: ghcr.io/retrozenith/tuxmate:latest
     container_name: tuxmate
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=production
       - PORT=3000
+      - NEXT_TELEMETRY_DISABLED=1
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000"]
