--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -63,6 +63,8 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
+          build-args: |
+            NEXT_TELEMETRY_DISABLED=1
 
       - name: Image digest
         run: echo ${{ steps.meta.outputs.digest }}
