fix: resolve CORS issues in 39dbc46 by moving verification to build-time
- Replace runtime Flathub API calls with static JSON generation
- Add prebuild and predev scripts to specificially fetch verification data
- Refactor useVerification hook to be synchronous
- Fixes Flathub API CORS errors in production

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prebuild": "node scripts/fetch-verified-flatpaks.mjs",
+    "predev": "node scripts/fetch-verified-flatpaks.mjs",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
